JumpScript/tests/baselines/reference/parserFunctionDeclaration6.errors.txt
tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration6.jump(3,14): error TS2389: Function implementation name must be 'foo'.


==== tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration6.jump (1 errors) ====
    {
        function foo();
        function bar() { }
                 ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }